Coba tanpa node.js

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
   </div>
 
-  <!-- Urutan penting: auth.js dulu -->
-  <script src="auth.js?v=1"></script>
-  <script src="login.js?v=1"></script>
+  <!-- Urutan penting -->
+  <script src="auth.js?v=prod5"></script>
+  <script src="login.js?v=prod5"></script>
 </body>
 </html>
