Update login page

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <script src="auth.js?v=prod5"></script>
-  <script src="dashboard.js?v=prod5"></script>
+  <script src="auth.js?v=u1"></script>
+  <script src="dashboard.js?v=u1"></script>
 </body>
 </html>
