--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div class="card">
       <h2>Register</h2>
       <div class="row">
+        <input id="regUsername" type="text" placeholder="username (min 3 huruf/angka)" />
+      </div>
+      <div class="row">
         <input id="regEmail" type="email" placeholder="email" />
         <input id="regPass" type="password" placeholder="password (min 6)" />
       </div>
@@ -31,12 +34,12 @@
         <button id="btnReg" class="secondary">Buat Akun</button>
         <button id="btnClose" class="secondary">Batal</button>
       </div>
-      <p class="hint">Email harus valid. Password minimal 6 karakter.</p>
+      <p class="hint">Username 3–24 karakter (huruf/angka/underscore). Email valid. Password min 6.</p>
     </div>
   </div>
 
   <!-- Urutan penting -->
-  <script src="auth.js?v=prod5"></script>
-  <script src="login.js?v=prod5"></script>
+  <script src="auth.js?v=u1"></script>
+  <script src="login.js?v=u1"></script>
 </body>
 </html>
