--- a/auth.html
+++ b/auth.html
@@ -25,8 +25,7 @@
         <input id="lPass" type="password" placeholder="••••••" />
         <button id="lToggle" class="pw__toggle" aria-label="Lihat password">👁</button>
       </div>
-      <button id="btnLogin" class="btn btn--pri" style="border-top-width: 1px; margin-top: 5px;">Masuk</button>
-
+      <button id="btnLogin" class="btn btn--pri" style="margin-top: 5px;">Masuk</button>
       <p class="muted" style="margin-top:12px">
         Belum memiliki akun?
         <a href="#" id="openReg" class="link">Registrasi di sini</a>
